2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in 'centos6/install_rivendell.sh' that broke
	installation in '--server' mode.
	* Implemented a '--client' mode in 'centos6/install_rivendell.sh'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed guest account configuration in 'centos7/smb.conf'.
	* Fixed a bug in 'centos7/install_rivendell.sh' that caused NFS
	services to fail to be enabled when installing in '--server' mode.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'Optional Actions' section from
	'docs/rivendell-install-rhel7.xml'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 0.7.1.
2016-07-20 Fred Gleason <fredg@paravelsystems.com>
	* Added 'man-pages' to the set of installed packages in
	'centos7/install_rivendell_devel.sh'.
	* Added 'man-pages' to the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-21 Fred Gleason <fredg@paravelsystems.com>
	* Added 'xfce4-screenshooter' and 'net-tools' packages to the set
	of installed packages in 'centos7/install_rivendell_devel.sh'.
2016-07-22 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'alsa-utils' package to the set
	of installed packages in 'centos7/install_rivendell_devel.sh'.
2016-07-25 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'cups' package to the set
	of installed packages in 'centos7/install_rivendell.sh'.
2016-11-18 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'docs/rivendell-install-rhel7.xml' to use nmtui(8) for
	initial network configuration instead of nmcli(8).
2016-11-18 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 0.7.1.
2017-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Clarified the installation instructions in 'docs/' by specifying
	the absolute path to the installation script.
2017-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.3.