@@ -134,3 +134,6 @@
 	the absolute path to the installation script.
 2017-01-13 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.7.3.
+2017-01-13 Fred Gleason <fredg@paravelsystems.com>
+	* Hard-coded the installation location of the web content in
+	'rivendell-install-web.spec.in'.
